2003-07-17  Mikael Hallendal  <micke@imendio.com>

        * Release 0.12

	* NEWS: Updated for 0.12
	* configure.in: Bumped to 0.12

2003-07-17  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c:
	(auth_req_data_free): Added, free's auth data
	(connection_create_auth_req_msg): 
	- Added, generates an auth request message
	(connection_create_auth_msg):
	- Added, generates an auth message
	(connection_auth_req_reply): Added
	(connection_check_auth_type): Added
	(lm_connection_authenticate): Modified
	(lm_connection_authenticate_and_block): Modified
        - Fixes cf-bug #509

2003-07-17  Mikael Hallendal  <micke@imendio.com>

	* configure.in: Added GNUTLS_REQUIRED
	* loudmouth.spec.in: Added gnutls dependency in RPM's.

2003-07-17  Mikael Hallendal  <micke@imendio.com>

	* docs/reference/loudmouth-sections.txt: Added new functions
	* docs/reference/tmpl/lm-error.sgml: Documented undocumented references.
	* docs/reference/tmpl/lm-message-handler.sgml: Same.
	* docs/reference/tmpl/loudmouth-unused.sgml: Same
	* loudmouth/lm-debug.c: Same
	
	* loudmouth/lm-message-handler.c:
	* loudmouth/lm-message-handler.h:
	(_lm_message_handler_handle_message): 
	- Check if handler is valid before trying to handle message.
	(lm_message_handler_new): Set handler to be valid.
	(lm_message_handler_invalidate): Added. Fixes cf-bug #677
	(lm_message_handler_is_valid): Added

2003-07-14  Mikael Hallendal  <micke@imendio.com>

        * Release 0.11

        * configure.in: Bumped to 0.11
	* NEWS: Updated for 0.11
	
2003-07-12  Mikael Hallendal  <micke@imendio.com>

	* configure.in: 
	- Added SSL support, patch from Bartosz Zapalowski. THIS GUY ROCKS!
	* docs/reference/loudmouth-sections.txt: 
	- added lm_connection_supports_ssl.
	* loudmouth/lm-connection.c: Added support for SSL.
	* loudmouth/test-lm.c: (main): Use SSL if it's compiled in.

2003-07-07  Mikael Hallendal  <micke@imendio.com>

        * Release 0.10.1

	* NEWS: Updated for 0.10.1